** Introduced `make test' target and significantly tightened up test suite.
** Very large number of code and documentation fixes (over 80 commits since version 2.0.1).
** The '--conflicts' option has been removed.

Stow will always show conflicts if they are found during the scanning
phase.

** Improved debugging output.
** Converted man page to POD format.
** Fixed code style consistency issues.
** Running configure from outside the source tree now works.
** `make distcheck' now works.
* Changes in version 2.0.1
** Defer operations until all potential conflicts have been assessed.

We do this by traversing the installation image(s) and recording the
actions that need to be performed.  Redundant actions are factored out,
e.g., we don't want to create a link that we will later remove in order to
create a directory.  Benefits of this approach

    1. Get to see _all_ the conflicts that are blocking an installation: 
       you don't have to deal with them one at a time.
    2. No operations are be performed if _any_ conflicts are detected:
       a failed stow will not leave you with a partially installed 
       package.
    3. Minimises the set of operations that need to be performed.
    4. Operations are executed as a batch which is much faster
       This can be an advantage when upgrading packages on a live system
       where you want to minimise the amount of time when the package is
       unavailable.

** The above fixes the false conflict problem mentioned in the info file. 

** It also fixes the two bugs mentioned in the man page.

** Multiple stow directories will now cooperate in folding/unfolding.

** Conflict messages are more uniform and informative. 

** Verbosity and tracing is more extensive and uniform.

** Implemented option parsing via Getopt::Long.

** Default command line arguments set via '.stowrc' and '~/.stowrc' files.

Contents of these files are parsed as though they occurred first on the
command line.
