@@ -17,10 +17,10 @@ config.log
 config.status
 configure
 /doc/ChangeLog.OLD
-/doc/manual.html
 /doc/manual.pdf
+/doc/manual-single.html
+/doc/manual-split/
 /doc/manual.texi
-/doc/stow.html
 /doc/stow.pdf
 /doc/stow.8
 /lib/Stow.pm
